CommandTree quality refactor